<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="masukanNikAnda">Masukan Nik Anda</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="kota">Kota</string>
    <string name="Kecamatan">Kecamatan</string>
    <string name="TanggalLahir">Tanggal Lahir</string>


    <string-array name="bulan">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>
</resources>
